<?xml version="1.0"?>
<package format="2">
  <name>variense_fse103</name>
  <version>1.0.0</version>
  <description>Variense FSE103 ROS Driver</description>
  <maintainer email="hassan.hakimkhalili@manchester.ac.uk">Hassan Hakim Khalili</maintainer>
  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
